<resources>
    <string name="app_name">Money Buddy</string>
    <string name="date_left_arrow">Go One Day Back</string>
    <string name="date_right_arrow">Go One Day Forward</string>
    <string name="default_date">Date Not Found</string>
    <string name="income">Income</string>
    <string name="default_amount">$ 928,319.00</string>
    <string name="income_icon">Income</string>
    <string name="go_income">Add new income</string>
    <string name="add">ADD</string>
    <string name="default_item_name">Example</string>
    <string name="usual_expense">Usual Expense</string>
    <string name="spent_today">How did you spend today ?</string>
    <string name="unusual_expense">Exclusive of the Day</string>
    <string name="add_category">Add new category</string>
    <string name="new_item_description">New Item Name:</string>
    <string name="amount">Amount:</string>
    <string name="confirm_new_item">ADD</string>
    <string name="cancel_new_item">DISMISS</string>
    <string name="money_sign">$</string>
    <string name="new_item_title">New Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="cat_name">Category Name</string>
    <string name="publicity">Help the developer by clicking this add</string>
    <string name="new_category_title">New Category</string>
    <string name="new_category_description">New Category Name:</string>
    <string name="icon">Set Icon:</string>
    <string name="color">Set Color:</string>
    <string name="new_category_icon">Icon for New Category</string>
    <string name="create">CREATE</string>
    <string name="new_category_color">Color for New Category</string>
    <string name="cancel_new_cat">Cancel creation of new category</string>

</resources>
