<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/cancel_action"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/cancel_new_cat"
                android:src="@drawable/add" />

            <TextView
                android:id="@id/new_category_title"
                style="@style/TextInToolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/cancel_action"
                android:layout_toRightOf="@id/cancel_action"
                android:gravity="center_vertical"
                android:text="@string/new_category_title" />

            <TextView
                style="@style/TextInToolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:text="@string/create" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_category_description"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/cat_name"
            android:inputType="textCapWords"
            android:textSize="@dimen/text_size_medium" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/icon_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_category_icon"
                android:textSize="@dimen/text_size_small" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/icon_text_view"
                android:layout_toRightOf="@id/icon_text_view"
                android:isScrollContainer="true">

            </Spinner>

        </RelativeLayout>

        <GridView
            android:id="@+id/grid_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:choiceMode="singleChoice"
            android:columnWidth="50dp"
            android:gravity="center_vertical"
            android:numColumns="auto_fit">

        </GridView>

        <TextView
            android:id="@+id/color_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_category_color"
            android:textSize="@dimen/text_size_small" />

        <GridView
            android:id="@+id/grid_colors"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:choiceMode="singleChoice"
            android:gravity="center_vertical"
            android:numColumns="5"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp">

        </GridView>

    </LinearLayout>

</ScrollView>