<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/new_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/new_category_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/new_category_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_category_title"
            android:text="@string/new_category_description"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:id="@+id/set_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_category_description"
            android:inputType="textCapWords"
            android:maxLength="15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_description"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/new_category_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="10dp"
                    android:text="@string/icon"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:id="@+id/category_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/new_category_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/new_category_icon"
                    android:src="@drawable/expense" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/new_category_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/color"
                    android:textSize="@dimen/text_size_small" />

                <Button
                    android:id="@+id/category_color"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/new_category_color"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/expense" />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="end"
        android:padding="8dp">


        <Button
            android:id="@+id/cancel_new_category_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/cancel_new_item"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/confirm_new_category_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:padding="8dp"
            android:text="@string/confirm_new_item"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>