<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Date and side buttons-->
    <RelativeLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"

        >

        <ImageView
            android:id="@+id/date_left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/date_left_arrow"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/date"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/date_left_arrow"
            android:layout_toRightOf="@id/date_left_arrow"
            android:gravity="center"
            android:minEms="10"
            android:minWidth="@dimen/min_date_width"
            android:text="@string/default_date" />

        <ImageView
            android:id="@+id/date_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/date"
            android:layout_toRightOf="@id/date"
            android:contentDescription="@string/date_right_arrow"
            android:src="@drawable/right_arrow" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#CCFF90"
        android:gravity="center">

        <ImageView
            android:id="@+id/income"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/todayIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/income"
            android:text="$00.00"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/todayIncome"
            android:layout_toRightOf="@id/income"
            android:text="$00.00"
            android:textSize="24sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#FFAB91"
        android:gravity="center">

        <ImageView
            android:id="@+id/expense"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/todayExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/expense"
            android:text="$00.00"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/todayExpense"
            android:layout_toRightOf="@id/expense"
            android:text="$00.00"
            android:textSize="24sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#80D8FF"
        android:gravity="center">

        <ImageView
            android:id="@+id/balance"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/todayBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/balance"
            android:text="$00.00"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/todayBalance"
            android:layout_toRightOf="@id/balance"
            android:text="$00.00"
            android:textSize="24sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</LinearLayout>